Fix wrapping text

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --font-size: 15px;
-  --font-family: 'SF Mono', Monaco, 'Lucida Console', monospace;
+  --font-family: 'Roboto Mono', monospace;
   --primary-background-color: #292d3e;
   --light-background-color: #4a4e64;
   --lightest-background-color: #3c40534a;
